--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 thiserror = "1.0.60"
 async-recursion = "1.1.1"
+sha1 = "0.10.6"
 
 [profile.release]
 lto = true
