--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,9 @@ indicatif = "0.17.8"
 dialoguer = "0.11.0"
 color-eyre = "0.6.3"
 async-compression = { version = "0.4.10", features = ["tokio", "gzip"] }
-quinn = { version = "0.10.2", features = ["runtime-tokio"] }
+quinn = { version = "0.11.0", features = ["runtime-tokio"] }
 stunclient = "0.4.0"
-rustls = { version = "0.21.5", features = ["dangerous_configuration"] }
+rustls = { version = "0.23.0" }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 thiserror = "1.0.60"
