--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,35 +1,29 @@
 [package]
 name = "quic-send"
-version = "0.1.1"
+version = "2.0.0"
 edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 bincode = "=2.0.0-rc.3"
-clap = { version = "4.5.4", features = ["derive"] }
+clap = { version = "4.5.16", features = ["derive"] }
 hex = "0.4.3"
 rcgen = "0.13.1"
-tokio = { version = "1.37.0", features = ["full"] }
+tokio = { version = "1.39.3", features = ["full"] }
 walkdir = "2.5.0"
 indicatif = "0.17.8"
 dialoguer = "0.11.0"
 color-eyre = "0.6.3"
-async-compression = { version = "0.4.10", features = ["tokio", "gzip"] }
-quinn = { version = "0.11.1", features = ["runtime-tokio"] }
+async-compression = { version = "0.4.12", features = ["tokio", "gzip"] }
+quinn = { version = "0.11.3", features = ["runtime-tokio"] }
 stunclient = "0.4.0"
-rustls = { version = "0.23.0", default_features = false, features = ["ring"] }
+rustls = { version = "0.23.12", default-features = false, features = ["ring"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
-thiserror = "1.0.60"
+thiserror = "1.0.63"
 async-recursion = "1.1.1"
-blake3 = "1.5.1"
 pretty_assertions = "1.4.0"
-serial_test = "3.1.1"
-notify-rust = { version = "4.11.0", optional = true }
-
-[features]
-default = ["toast-notifications"]
-toast-notifications = ["notify-rust"]
+iter_tools = "0.20.0"
 
 [profile.release]
 lto = true
