--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ tracing-subscriber = "0.3.18"
 thiserror = "1.0.63"
 pretty_assertions = "1.4.0"
 rand = "0.8.5"
+clap = { version = "4.5.16", features = ["derive"] }
 
 [profile.release]
 lto = true
