--- a/qs-cli/Cargo.toml
+++ b/qs-cli/Cargo.toml
@@ -9,9 +9,9 @@ tokio = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 quinn = { workspace = true }
+clap = { workspace = true }
 qs-core = { path = "../qs-core" }
 async-compression = { version = "0.4.12", features = ["tokio", "gzip"] }
-clap = { version = "4.5.16", features = ["derive"] }
 indicatif = "0.17.8"
 dialoguer = "0.11.0"
 
