--- a/qs-core/Cargo.toml
+++ b/qs-core/Cargo.toml
@@ -11,6 +11,7 @@ quinn = { workspace = true }
 rustls = { workspace = true }
 rcgen = { workspace = true }
 bincode = { workspace = true }
+clap = { workspace = true }
 async-compression = { version = "0.4.12", features = ["tokio", "gzip"] }
 stunclient = "0.4.0"
 
