--- a/qs-cli/Cargo.toml
+++ b/qs-cli/Cargo.toml
@@ -14,6 +14,7 @@ qs-core = { path = "../qs-core" }
 async-compression = { version = "0.4.12", features = ["tokio", "gzip"] }
 indicatif = "0.17.8"
 dialoguer = "0.11.0"
+colored = "2.1.0"
 
 [[bin]]
 path = "src/main.rs"
