--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 members = [
     "qs-core",
     "qs-cli",
-    "qs-roundezvous"
+    "qs-roundezvous",
+    "qs-gui/src-tauri",
 ]
 
 resolver = "2"
