--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [
     "qs-roundezvous",
     "qs-gui/src-tauri",
 ]
-
+package.authors = ["maxomatic458"]
 resolver = "2"
 
 [workspace.dependencies]
@@ -20,6 +20,7 @@ thiserror = "1.0.63"
 pretty_assertions = "1.4.0"
 rand = "0.8.5"
 clap = { version = "4.5.16", features = ["derive"] }
+
 
 [profile.release]
 lto = true
