--- a/qs-gui/src-tauri/Cargo.toml
+++ b/qs-gui/src-tauri/Cargo.toml
@@ -11,10 +11,13 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = ["shell-open"] }
+thiserror = { workspace = true }
+tokio = { workspace = true } 
+tauri = { version = "1.7.2", features = ["shell-open"] }
 serde = { version = "1", features = ["derive"] }
-tokio = { version = "1", features = ["full"] }
+qs-core = { path = "../../qs-core" }
 serde_json = "1"
+lazy_static = "1.5.0"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
