--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ thiserror = "1.0.63"
 pretty_assertions = "1.4.0"
 rand = "0.8.5"
 clap = { version = "4.5.16", features = ["derive"] }
+semver = "1.0.23"
 
 [profile.release]
 lto = true
