--- a/qs-cli/Cargo.toml
+++ b/qs-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "qs-cli"
-version = "0.2.1"
+version = "1.0.0"
 edition = "2021"
 
 [dependencies]
@@ -10,6 +10,7 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 quinn = { workspace = true }
 clap = { workspace = true }
+semver = { workspace = true }
 qs-core = { path = "../qs-core" }
 async-compression = { version = "0.4.12", features = ["tokio", "gzip"] }
 indicatif = "0.17.8"
