--- a/qs-cli/Cargo.toml
+++ b/qs-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "qs-cli"
-version = "1.0.0"
+version = "0.3.0"
 edition = "2021"
 
 [dependencies]
@@ -16,6 +16,7 @@ async-compression = { version = "0.4.12", features = ["tokio", "gzip"] }
 indicatif = "0.17.8"
 dialoguer = "0.11.0"
 colored = "2.1.0"
+color-eyre = "0.6.3"
 
 [[bin]]
 path = "src/main.rs"
