--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ pretty_assertions = "1.4.0"
 rand = "0.8.5"
 clap = { version = "4.5.16", features = ["derive"] }
 semver = "1.0.23"
+serde = { version = "1.0.215", features = ["derive"] }
 
 [profile.release]
 lto = true
