--- a/qs-gui/src-tauri/Cargo.toml
+++ b/qs-gui/src-tauri/Cargo.toml
@@ -23,4 +23,9 @@ tauri-plugin-shell = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 qs-core = { path = "../../qs-core" }
-
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+thiserror = { workspace = true }
+tauri-plugin-notification = "2"
+tauri-plugin-dialog = "2"
+walkdir = "2"
