--- a/qs-gui/src-tauri/Cargo.toml
+++ b/qs-gui/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "qs-qui"
 version = "0.3.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "A quic based peer-to-peer file transfer tool "
+authors = ["Maxomatic458"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
