--- a/qs-cli/Cargo.toml
+++ b/qs-cli/Cargo.toml
@@ -17,6 +17,7 @@ indicatif = "0.17.8"
 dialoguer = "0.11.0"
 colored = "2.1.0"
 color-eyre = "0.6.3"
+local-ip-address = { workspace = true }
 
 [[bin]]
 path = "src/main.rs"
