--- a/qs-gui/src-tauri/Cargo.toml
+++ b/qs-gui/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "qs-qui"
+name = "qs-gui"
 version = "0.3.1"
 description = "A quic based peer-to-peer file transfer tool"
 authors = ["Maxomatic458"]
