--- a/.github/workflows/release-ui.yml
+++ b/.github/workflows/release-ui.yml
@@ -1,9 +1,8 @@
-name: 'publish'
+name: 'Release UI'
 
 on:
-  push:
-    branches:
-      - release
+  release:
+    types: [created]
 
 # This workflow will trigger on each push to the `release` branch to create or update a GitHub release, build your app, and upload the artifacts to the release.
 
