--- a/.github/workflows/release-ui.yml
+++ b/.github/workflows/release-ui.yml
@@ -1,8 +1,9 @@
-name: 'Release UI'
+name: 'publish'
 
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - release
 
 # This workflow will trigger on each push to the `release` branch to create or update a GitHub release, build your app, and upload the artifacts to the release.
 
