--- a/.github/workflows/release-ui.yml
+++ b/.github/workflows/release-ui.yml
@@ -16,13 +16,13 @@ jobs:
       matrix:
         include:
           - platform: 'macos-latest' # for Arm based macs (M1 and above).
-            args: '--target aarch64-apple-darwin --package qs-gui'
+            args: '--target aarch64-apple-darwin'
           - platform: 'macos-latest' # for Intel based macs.
-            args: '--target x86_64-apple-darwin --package qs-gui'
+            args: '--target x86_64-apple-darwin'
           - platform: 'ubuntu-22.04' # for Tauri v1 you could replace this with ubuntu-20.04.
-            args: '--package qs-gui'
+            args: ''
           - platform: 'windows-latest'
-            args: '--package qs-gui'
+            args: ''
 
     runs-on: ${{ matrix.platform }}
     steps:
