--- a/qs-gui/package.json
+++ b/qs-gui/package.json
@@ -14,6 +14,8 @@
     "dependencies": {
         "@solidjs/router": "^0.15.1",
         "@tauri-apps/api": "^2",
+        "@tauri-apps/plugin-dialog": "^2.0.1",
+        "@tauri-apps/plugin-notification": "^2.0.0",
         "@tauri-apps/plugin-shell": "^2",
         "prettier": "^3.4.1",
         "solid-icons": "^1.1.0",
