--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ members = [
 resolver = "2"
 
 [workspace.dependencies]
+qs-core = { path = "qs-core", version = "0.3.0" }
+
 quinn = { version = "0.11.4", features = ["runtime-tokio"] }
 rustls = { version = "0.23.12", default-features = false, features = ["ring"] }
 rcgen = "0.13.1"
