--- a/qs-cli/Cargo.toml
+++ b/qs-cli/Cargo.toml
@@ -17,7 +17,8 @@ tracing-subscriber = { workspace = true }
 quinn = { workspace = true }
 clap = { workspace = true }
 semver = { workspace = true }
-qs-core = { workspace = true }
+qs-core = "0.3.0"
+
 async-compression = { version = "0.4.12", features = ["tokio", "gzip"] }
 indicatif = "0.17.8"
 dialoguer = "0.11.0"
