implement connection via iroh

--- a/qs-core/Cargo.toml
+++ b/qs-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "qs-core"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 authors = ["Maxomatic458"]
 description = "quic send core library"
@@ -21,7 +21,7 @@ clap = { workspace = true }
 semver = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 async-compression = { version = "0.4.12", features = ["tokio", "gzip"] }
-stunclient = "0.4.0"
+iroh = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = { workspace = true }
