--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,6 @@
 members = [
     "qs-core",
     "qs-cli",
-    "qs-roundezvous",
     "qs-gui/src-tauri"
 ]
 
@@ -10,12 +9,13 @@ resolver = "2"
 
 [workspace.dependencies]
 # Its not possible to use a path here if the qs-cli package needs to be published to crates.io
-qs-core = { git = "https://github.com/maxomatic458/quic-send", version = "0.3.0" }
+# qs-core = { git = "https://github.com/maxomatic458/quic-send", version = "0.3.0" }
+qs-core = { path = "./qs-core" } # todo remove path
 
 quinn = { version = "0.11.4", features = ["runtime-tokio"] }
 rustls = { version = "0.23.12", default-features = false, features = ["ring"] }
 rcgen = "0.13.1"
-bincode = "=2.0.0-rc.3"
+bincode = { version = "=2.0.0-rc.3", features = ["serde"] }
 tokio = { version = "1.40.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
@@ -26,6 +26,8 @@ clap = { version = "4.5.16", features = ["derive"] }
 semver = "1.0.23"
 serde = { version = "1.0.215", features = ["derive"] }
 local-ip-address = "0.6.3"
+iroh = { version = "0.33.0" }
+hex = "0.4.3"
 
 [profile.release]
 lto = true
