--- a/qs-cli/Cargo.toml
+++ b/qs-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "qs-cli"
-version = "0.3.1"
+version = "0.4.0"
 description = "A quic based peer-to-peer file transfer tool"
 authors = ["Maxomatic458"]
 edition = "2021"
@@ -17,7 +17,11 @@ tracing-subscriber = { workspace = true }
 quinn = { workspace = true }
 clap = { workspace = true }
 semver = { workspace = true }
-qs-core = "0.3.0"
+iroh = { workspace = true }
+rand = { workspace = true }
+qs-core = { workspace = true } # todo remove later
+bincode = { workspace = true, features = ["serde"] }
+hex = { workspace = true }
 
 async-compression = { version = "0.4.12", features = ["tokio", "gzip"] }
 indicatif = "0.17.8"
