--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ bincode = { version = "=2.0.0-rc.3", features = ["serde"] }
 tokio = { version = "1.40.0", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
-thiserror = "2.0.11"
+thiserror = "2.0.12"
 pretty_assertions = "1.4.1"
 rand = "0.8.5"
 clap = { version = "4.5.31", features = ["derive"] }
@@ -27,6 +27,7 @@ semver = "1.0.25"
 serde = { version = "1", features = ["derive"] }
 iroh = { version = "0.33.0" }
 hex = "0.4.3"
+copypasta = "0.10.1"
 
 [profile.release]
 lto = true
