--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ serde = { version = "1", features = ["derive"] }
 iroh = { version = "0.33.0" }
 hex = "0.4.3"
 copypasta = "0.10.1"
+base64 = "0.22.1"
 
 [profile.release]
 lto = true
