--- a/qs-gui/src-tauri/Cargo.toml
+++ b/qs-gui/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "qs-gui"
-version = "0.3.1"
+version = "0.4.0"
 description = "A quic based peer-to-peer file transfer tool"
 authors = ["Maxomatic458"]
 edition = "2021"
@@ -18,14 +18,20 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
+tokio = { version = "1", features = ["full"] }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+thiserror = { workspace = true }
+rand = { workspace = true }
+iroh = { workspace = true }
+base64 = { workspace = true }
+bincode = { workspace = true }
+
 tauri = { version = "2", features = [] }
 tauri-plugin-shell = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 qs-core = { path = "../../qs-core" }
-tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
-thiserror = { workspace = true }
 tauri-plugin-notification = "2"
 tauri-plugin-dialog = "2"
 walkdir = "2"
