--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,17 +15,23 @@ qs-core = { path = "./qs-core" } # todo remove path
 quinn = { version = "0.11.6", features = ["runtime-tokio"] }
 rustls = { version = "0.23.23", default-features = false, features = ["ring"] }
 rcgen = "0.13.2"
-bincode = { version = "=2.0.0-rc.3", features = ["serde"] }
-tokio = { version = "1.43.1", features = ["full"] }
+bincode = { version = "2.0.1", features = ["serde"] }
+tokio = { version = "1.43.1", features = [
+    "rt",
+    "rt-multi-thread",
+    "time",
+    "macros",
+    "net",
+    "fs",
+] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 thiserror = "2.0.12"
 pretty_assertions = "1.4.1"
-rand = "0.8.5"
-clap = { version = "4.5.31", features = ["derive"] }
+rand = "0.8.5" # 0.8.5 because of iroh
 semver = "1.0.25"
 serde = { version = "1", features = ["derive"] }
-iroh = { version = "0.33.0" }
+iroh = { version = "0.35.0" }
 hex = "0.4.3"
 copypasta = "0.10.1"
 base64 = "0.22.1"
@@ -33,4 +39,6 @@ base64 = "0.22.1"
 [profile.release]
 lto = true
 codegen-units = 1
-opt-level = "s"
+opt-level = "z"
+panic = "abort"
+strip = true
