--- a/qs-cli/Cargo.toml
+++ b/qs-cli/Cargo.toml
@@ -23,7 +23,7 @@ copypasta = { workspace = true }
 base64 = { workspace = true }
 
 clap = { version = "4.5.31", features = ["derive"] }
-qs-core = { path = "../qs-core" } # todo remove path
+qs-core = "0.4.1"
 async-compression = { version = "0.4.12", features = ["tokio", "gzip"] }
 indicatif = "0.17.8"
 dialoguer = "0.11.0"
