fix workflow for linux

--- a/.github/workflows/rust-release.yml
+++ b/.github/workflows/rust-release.yml
@@ -25,6 +25,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install system dependencies
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libglib2.0-dev pkg-config
+
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
         with:
