--- a/.github/workflows/rust-release.yml
+++ b/.github/workflows/rust-release.yml
@@ -30,7 +30,14 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libglib2.0-dev pkg-config
+          sudo apt-get install -y \
+            libglib2.0-dev \
+            libgtk-3-dev \
+            pkg-config \
+            build-essential \
+            libatk1.0-dev \
+            libcairo2-dev \
+            libpango1.0-dev
 
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
