fix ui workflow frfrfr

--- a/.github/workflows/release-ui.yml
+++ b/.github/workflows/release-ui.yml
@@ -4,7 +4,8 @@ on:
   release:
     types: [published]
 # This workflow will trigger on each push to the `master` branch to create or update a GitHub release, build your app, and upload the artifacts to the release.
-
+  workflow_dispatch:
+    
 jobs:
   publish-tauri:
     permissions:
