--- a/qs-gui/src-tauri/Cargo.toml
+++ b/qs-gui/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "qs-gui"
-version = "0.4.0"
+version = "0.4.1"
 description = "A quic based peer-to-peer file transfer tool"
 authors = ["Maxomatic458"]
 edition = "2021"
@@ -11,7 +11,7 @@ edition = "2021"
 # The `_lib` suffix may seem redundant but it is necessary
 # to make the lib name unique and wouldn't conflict with the bin name.
 # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
-name = "qs_qui_lib"
+name = "qs_gui_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
